<resources>
    <string name="app_name">轻雨</string>
    <string name="app_slogan">聆听你的雨声</string>
    <string name="login_title">账号密码登录</string>
    <string name="login_username">请输入手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="login_phone_register">手机验证码登录</string>
    <string name="login_problem">登陆遇到问题</string>
    <string name="login_share">————社交账号直接登陆————</string>
    <string name="login_wechat">微信</string>
    <string name="login_qq">QQ</string>
    <string name="login_weibo">微博</string>
    <string name="register_btn">获取验证码</string>
    <string name="info_login_no">点击登录</string>
    <string name="info_login_title">新人注册享十大福利</string>
    <string name="info_learning_time">学习时长</string>
    <string name="info_learning_experience">经验</string>
    <string name="info_follow">关注</string>
    <string name="info_fans">粉丝</string>
    <string name="info_integral">积分</string>
    <string name="test_name">昵称</string>
    <string name="setting_clean">清理缓存</string>
    <string name="setting_info_click">请先登录</string>
    <string name="quit_login">退出登录</string>
    <string name="personal_space">课程</string>
    <string name="user_icon">头像</string>
    <string name="list_null_tip">童鞋有点懒哦~还没有学习课程</string>
    <string name="tab_follow">关注</string>
    <string name="tab_un_follow">取消关注</string>
    <string name="tab_fan">粉丝</string>
    <string name="list_follow_null">童鞋你还没有关注其他人哦~</string>
    <string name="list_fan_null">还没有人关注童鞋你哦~</string>
    <string name="list_class_null">更多优质课程等你来学哦~</string>
    <string name="version_code">请输入验证码</string>
    <string name="re_version_code">重新发送验证码</string>
    <string name="search_bar_title">语文  ·  数学  ·  英语</string>
    <string name="all">全部</string>
    <string name="list_data_null">没有更多数据了~</string>
    <string name="list_evaluate_null">还没有同学来评论哦，您要做第一个么~</string>
    <string name="title_learning">学习</string>
    <string name="class_learning">我的课程</string>
    <string name="favourite">收藏</string>
    <string name="qa">问答</string>
    <string name="note">笔记</string>
    <string name="hand_write">手记</string>
    <string name="only_one">专栏</string>
    <string name="download">下载</string>
    <string name="upload">上传</string>
    <string name="share">分享</string>
    <string name="sing_in">签到</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="search_history">搜索历史</string>
    <string name="search_clean">清空</string>
    <string name="last">最新</string>
    <string name="show_no_learning">仅显示未学</string>
    <string name="try_watch">试看</string>
    <string name="advice">咨询</string>
    <string name="join_cart">加入购物车</string>
    <string name="cart">购物车</string>
    <string name="cart_null">购物车竟然是空的</string>
    <string name="buy">立即购买</string>
    <string name="brief">简介</string>
    <string name="evaluate">评价</string>
    <string name="write_evaluate">写评价</string>
    <string name="hint_evaluate">说说的你看法吧</string>
    <string name="learning">立即学习</string>
    <string name="good">好评</string>
    <string name="bad">差评</string>
    <string name="do_evaluate">发表评论</string>
    <string name="send">发表</string>
    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="price_all">合计 :</string>
    <string name="count_price">去结算</string>
</resources>
