<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <ImageView
        android:id="@+id/registerBack"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:src="@mipmap/ic_arrow_left"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="50dp">
        <Button
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="23sp"
            android:textColor="@color/colorBtn"
            android:background="@drawable/btn_border_line"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan"
            android:textSize="17sp"
            android:textColor="@color/colorTextHint"
            android:gravity="center"/>
    </LinearLayout>

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/login_username"
        android:textColorHint="@color/colorTextHint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:background="@null"
        android:inputType="number"
        android:layout_marginBottom="25dp"
        android:importantForAutofill="no"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/login_password"
        android:textColorHint="@color/colorTextHint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:background="@null"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:textSize="15sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">
        <Button
            android:id="@+id/registerBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_height="45dp"
            android:text="@string/register_btn"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/btn_bg_red_plus"/>
    </LinearLayout>


</LinearLayout>