<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <ImageView
        android:id="@+id/loginBack"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@mipmap/ic_back"
        android:layout_gravity="end"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="28sp"
        android:textColor="@color/colorText"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"/>
    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/login_username"
        android:textColorHint="@color/colorTextHint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:background="@null"
        android:inputType="number"
        android:layout_marginBottom="25dp"
        android:importantForAutofill="no"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/login_password"
        android:textColorHint="@color/colorTextHint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:background="@null"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:textSize="15sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center">
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_height="50dp"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/btn_bg_red"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/loginToPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/login_phone_register"
            android:gravity="end"
            android:textColor="@color/colorTextTip"
            android:textSize="14sp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:background="@color/colorTextHint"/>
        <TextView
            android:id="@+id/loginProblem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/login_problem"
            android:gravity="start"
            android:textColor="@color/colorTextTip"
            android:textSize="14sp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_share"
                android:textSize="15sp"
                android:textColor="@color/colorTextHint"
                android:layout_margin="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="80dp"
                android:paddingStart="80dp"
                android:paddingEnd="80dp">
                <LinearLayout
                    android:id="@+id/loginWeChat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@mipmap/ic_wechat"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_wechat"
                        android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/loginQQ"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@mipmap/ic_qq"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/login_qq"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/loginWeiBo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@mipmap/ic_weibo"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/login_weibo"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>