<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_learning"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:layout_gravity="center|start"/>
        <LinearLayout
            android:id="@+id/learningDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:layout_marginEnd="50dp"
            android:gravity="center">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@mipmap/ic_download" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:textSize="12sp"
                android:textColor="@color/colorListGrey"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/learningRegisterOnes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@mipmap/ic_register_ones"
                android:layout_marginTop="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sing_in"
                android:textSize="12sp"
                android:textColor="@color/colorListGrey"
                android:layout_marginTop="3dp"/>
        </LinearLayout>

    </FrameLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="20dp"
        app:cardCornerRadius="10dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <LinearLayout
                android:id="@+id/learningFavourite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/ic_favourite"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favourite"
                    android:textSize="13sp"
                    android:textColor="@color/titleTextColor"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/learningQA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/ic_q_a"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qa"
                    android:textSize="13sp"
                    android:textColor="@color/titleTextColor"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/learningNote"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/ic_note"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textSize="13sp"
                    android:textColor="@color/titleTextColor"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/learningHandWrite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/ic_hand_written"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hand_write"
                    android:textSize="13sp"
                    android:textColor="@color/titleTextColor"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/learningOnlyShow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/ic_only_show"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/only_one"
                    android:textSize="13sp"
                    android:textColor="@color/titleTextColor"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_learning"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:layout_gravity="center|start"/>
        <LinearLayout
            android:id="@+id/learningSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textSize="12sp"
                android:textColor="@color/colorListGrey"
                android:layout_marginEnd="5dp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_select"/>
        </LinearLayout>
    </FrameLayout>
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/learningRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/learningRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:id="@+id/learningListNull"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:src="@drawable/ic_follow_bac"/>
                <TextView
                    style="@style/listViewTitle"
                    android:text="@string/list_class_null"/>
            </LinearLayout>
        </FrameLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>