<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <ImageView
                android:id="@+id/cartBack"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_arrow_back_nobar"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/cart"
                android:textSize="18sp"
                android:textColor="@color/colorText"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/cartEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="@string/edit"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bacGrey">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:id="@+id/cartListNull"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/ic_search_bac"/>
            <TextView
                style="@style/miniTitle"
                android:text="@string/cart_null"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <ImageView
                android:id="@+id/cartSelectImg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_no_select"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/bottom_text"
                android:text="@string/select_all"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="@string/price_all"
                android:layout_marginStart="30dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:id="@+id/cartPriceAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="￥0.00"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/cartBtn"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_gravity="end|center"
                    android:text="@string/count_price"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:background="@drawable/btn_bg_red_cart"/>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>