<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/searchHistoryBack"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_arrow_back_nobar"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/searchHistoryEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/search_hint"
                android:maxLines="1"
                android:textColorHint="@color/colorTextHint"
                android:textSize="17sp"
                android:textColor="@color/colorText" />
            <ImageView
                android:id="@+id/searchHistorySearch"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_search_black"
                android:layout_gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <FrameLayout
        android:id="@+id/searchHistoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history"
            android:textSize="12sp"
            android:textColor="@color/search_text"/>
        <TextView
            android:id="@+id/searchHistoryClean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_clean"
            android:textSize="12sp"
            android:textColor="@color/search_clean"
            android:layout_gravity="end"/>
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchHistoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="5dp"/>
</LinearLayout>